first initial commit

--- a/_includes/frontpage-header.html
+++ b/_includes/frontpage-header.html
@@ -1,29 +1,52 @@
-<!-- Slider Start 
-<section id="slider">
-    <div class="container">
-        <div class="row">
-                <iframe title="vimeo-player" src="https://player.vimeo.com/video/346738342" width="640" height="360" frameborder="0" allowfullscreen></iframe>
-        </div>
+ 
+   <section class="section container">
+
+    <div class="container-boxes">
+       <div class="box fill">MUSIC</div>
+       <div class="box fill">TOUR</div>
+       <div class="box fill">ABOUT</div>
+       <div class="box fill">VIDEO</div>
+       <div class="box fill">CONTACT</div>
     </div>
-</section>
--->
 
+ </section>
 
-<!--
+ 
+ <section class="section">
+ 
+ <div class="container">
+    <div class="row bottom image">
+       <div class="col-md-7 bg-album"></div>
+       <div class="col-md-5 bg-right d-flex align-items-center">
+          <div class="row justify-content-center">
+             <div class="col-sm-8">
+                <div class="content text-left py-3">
+                   <h2 class="album-title">REGRESSING TIMES</h2>
 
-    <div class="vimeo-container">
-        <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/346738342?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
-</div>
+                   <h3>NEW ALBUM COMING JULY 29, 2020</h3>
 
--->
+                   <ul class="album-listing py-4">
+                      <li>1) I See You in Ruins</li>
+                      <li>2) Lost the Plot</li>
+                      <li>3) There is No Hope</li>
+                      <li>4) Mirrors Tell All</li>
+                      <li>5) Regressing Times</li>
+                      <li>6) Modern Fascists
+                      </li>
+                      <li>7) No Minds</li>
+                      <li>8) Trust Yourself </li>
+                   </ul>
 
-<div class="container">
+                   <button type="button" class="btn btn-lg btn-block btn-outline-dark">Pre-Order the Album</button>
 
-    <div class="vimeo-container">
-        {{site.data.site.front_page_video}}
-      </div>
+                </div>
+             </div>
+          </div>
+       </div>
+    </div>
+ </div>
 
-</div>
-
+ </section>      
+   
 
   
