--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,13 @@
   <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+  
 
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+     
 
 
   <!-- Js -->
@@ -61,44 +67,30 @@
 
   <!-- Global site tag (gtag.js) - Google Analytics goes here pal-->
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-164943714-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-164943714-1');
-</script>
-
-<meta name="google-site-verification" content="ItzTsc14AeClf4lP104lEeyfNXsgfNEsqulugUbuBHQ" />
-
 
 </head>
 
 <body>
 
-  {{ content }}
+
+    {{ content }}
 
 
   <!-- footer Start -->
   <footer>
+    
     <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="footer-menu">
+       <div class="row">
+          <div class="col-md-10 mx-auto text-center">
+             &copy; 2021. Don't rip stuff off mate. Nobody reads shit in footers anyway, no?  
+          </div>
+          <p><small>Site made by <a href="https://danielcarlyle.carbonmade.com" target="_blank" rel="noopener noreferrer">Daniel Carlyle</a></small></p>
 
-
-            <ul class="social-icons">
-              <li>
-                <a href="https://www.imdb.com/name/nm3040932/?ref_=fn_al_nm_7" target="_blank" rel="noopener noreferrer"><i class="fab fa-imdb fa-5x" aria-hidden="true"></i></a>
-              </li>
-              <li>
-                <a href="https://vimeo.com/cjm" target="_blank" rel="noopener noreferrer"><i class="fab fa-vimeo-v fa-5x" aria-hidden="true"></i></a>
-              </li>
-              <li>
-                <a href="https://www.linkedin.com/in/christopher-john-malanchen-21629353/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin fa-5x" aria-hidden="true"></i></a>
-              </li>
-            </ul>
+       </div>
+    </div>
+    
+    
+   </footer>    
 
 <!--
 
@@ -111,16 +103,6 @@
 
             </ul>
 -->
-
-          </div>
-          <p>Copyright &copy; 2021</p>
-          <p><small>Site made by <a href="https://danielcarlyle.carbonmade.com" target="_blank" rel="noopener noreferrer">Daniel Carlyle</a></small></p>
-        </div>
-      </div>
-
-
-    </div>
-  </footer>
 
 
   <!-- Return to Top -->
