updated video section, pushed to stillwaves.ca

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -82,9 +82,10 @@
     <div class="container">
        <div class="row">
           <div class="col-md-10 mx-auto text-center">
-             &copy; 2021. Don't rip stuff off mate. Nobody reads shit in footers anyway, no?  
+             <p>&copy; 2021</p>
+             <p><small>Site made by <a href="https://danielcarlyle.carbonmade.com" target="_blank" rel="noopener noreferrer">Daniel Carlyle</a></small></p>
+
           </div>
-          <p><small>Site made by <a href="https://danielcarlyle.carbonmade.com" target="_blank" rel="noopener noreferrer">Daniel Carlyle</a></small></p>
 
        </div>
     </div>
