updated video section, pushed to stillwaves.ca

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -106,10 +106,10 @@
 -->
 
 
-  <!-- Return to Top -->
+  <!-- Return to Top]
   <a href="javascript:" id="return-to-top"><i class="icon-chevron-up"></i></a>
 
-
+ -->
 
   <!--
 
