--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,73 @@
 <div class="curtain">
 </div>
 
+<header id="header" role="heading">
+
+   <div class="container-fluid">
+
+           <nav>
+
+            <!--
+
+               <h1 class="logo"><a class="" href="index.html">Christopher John Malanchen</a>
+                   <span class="logo-subtitle">Editor, Film &amp; Television </span></h1> 
+   
+               <ul>
+                   <li class="nav-item">
+                       <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                   </li>
+                   <li class="nav-item">
+                       <a class="nav-link" href="portfolio.html">Portfolio</a>
+                   </li>
+                   <li class="nav-item">
+                       <a class="nav-link" href="bio.html">About</a>
+                   </li>
+                   <li class="nav-item">
+                       <a class="nav-link" href="contact.html">Connect</a>
+                   </li>
+               </ul>
+
+
+            -->
+
+
+               <h1 class="logo"><a href="index.html"><span class="aqua">Still</span><span class="white">Waves</span></a></h1>
+               <ul class="main-nav">
+            
+                  <li>
+                     <div class="theme-switch">
+                        <div class="switch"></div>
+                     </div>
+                  </li>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="music.html">Music</a></li>
+                  <li><a href="about.html">About</a></li>
+                  <li><a href="videos.html">Videos</a></li>
+                  <li><a href="contact.html">Contact</a></li>
+               </ul>
+
+
+               <div class="nav__icon">
+                       <span></span>
+                       <span></span>
+                       <span></span>
+               </div>
+       </nav>
+       <!--/Nav-->
+   </div>        
+
+
+   
+</header>
+<!--/Header-->
+
+
+
+
+
+<!--
+
+
 <header id="header" role="header" class="header">
    <h1 class="logo"><a href="index.html"><span class="aqua">Still</span><span class="white">Waves</span></a></h1>
    <ul class="main-nav">
@@ -17,3 +84,6 @@
       <li><a href="contact.html">Contact</a></li>
    </ul>
 </header>
+
+-->
+
