--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ figure {
   padding: var(--spacing);
   position: relative;
   max-height: 50em;
+  height: 100%;
 }
 
 .img-wrapper img {
@@ -56,16 +57,22 @@ figure {
   z-index: 1;
 }
 
-/* MIXINS */
-main {
+html, body {
+  min-height: 100vh;
+}
+
+/* MIXINS 
+body {
   padding-top: 30em;
 }
 
 @media (min-width: 769px) {
-  main {
+  body {
     padding-top: 15em;
   }
 }
+*/
+
 /*Animation Prefs*/
 @-webkit-keyframes pulse {
   0% {
@@ -212,96 +219,6 @@ a {
   text-decoration: none;
 }
 
-.logo {
-  margin: 0;
-  font-size: 3.45em;
-}
-
-@media (max-width: 769px) {
-  .logo {
-    margin: 0;
-    font-size: 2.25em;
-  }
-}
-.main-nav {
-  margin-top: 2px;
-}
-
-.main-nav li:first-of-type {
-  margin-top: 8px;
-  margin-right: 6px;
-}
-
-.logo a,
-.main-nav a {
-  padding: 10px 15px;
-  text-transform: uppercase;
-  text-align: center;
-  display: block;
-}
-
-.main-nav a {
-  color: #2e98c7;
-  font-size: 1.25em;
-}
-
-.main-nav a:hover {
-  color: #718daa;
-}
-
-.header {
-  padding-left: 2em;
-  padding-top: 0.5em;
-  padding-bottom: 0.5em;
-  background-color: #1a1a1a;
-  position: fixed;
-  width: 100vw;
-  z-index: 1000;
-  margin-bottom: 2em;
-   /*
-   border: 1px solid #a2a2a2;
-   -webkit-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
-	-moz-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
-	box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	border-radius: 5px;
-   */
-}
-
-/* ================================= 
-  Media Queries
-==================================== */
-@media (min-width: 769px) {
-  .header,
-  .main-nav {
-    display: -webkit-box;
-    display: flex;
-  }
-
-  .header {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    flex-direction: column;
-    -webkit-box-align: center;
-    align-items: center;
-  }
-
-  .header .header {
-    width: 80%;
-    margin: 0 auto;
-    max-width: 1150px;
-  }
-}
-@media (min-width: 1025px) {
-  .header {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    flex-direction: row;
-    -webkit-box-pack: justify;
-    justify-content: space-between;
-  }
-}
 /* main page styling */
 .section {
   padding: 4em 0;
@@ -529,4 +446,324 @@ footer {
   color: #fff;
   font-weight: #d9d9d9;
   margin-top: 4em;
+}
+
+
+
+#return-to-top {
+position: fixed;
+bottom: 20px;
+right: 20px;
+background: rgba(0,0,0,.7);
+width: 50px;
+height: 50px;
+display: block;
+text-decoration: none;
+border-radius: 35px;
+transition: all .3 ease;
+}
+
+
+
+
+/* New header styling */
+
+/*--
+	Header Start 
+--*/
+header {
+  background: #fff;
+  padding: 20px 0;
+}
+header .navbar {
+  margin-bottom: 0px;
+  border: 0px;
+}
+header .navbar-brand {
+  padding-top: 5px;
+}
+header .navbar-default {
+  background: none;
+  border: 0px;
+}
+
+.navbar-dark .navbar-toggler {
+  color: #495057;
+  border-color: rgb(1, 31, 49);
+}
+
+header .navbar-default .navbar-nav {
+  padding-top: 10px;
+}
+header .navbar-default .navbar-nav li a {
+  color: #333333;
+  padding: 10px 26px;
+  font-size: 15px;
+}
+font header .navbar-default .navbar-nav li a:hover {
+  color: #000;
+}
+
+.navbar {
+  /*position: relative; */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  padding: 2.25rem 0em 2em;
+}
+
+.navbar-dark .navbar-nav .nav-link:hover {
+  color: rgba(0, 0, 0, 0.6);
+}
+
+.navbar-brand {
+  display: inline-block;
+  padding-top: 0;
+  padding-bottom: .3125rem;
+  /* margin-right: 1rem; */
+  font-size: 1.25rem;
+  line-height: inherit;
+  white-space: nowrap;
+}
+
+
+/* new header styling */
+.nav-link {
+  display: block;
+  padding: 0rem 0.3rem;
+}
+
+header a {
+  background: transparent;
+  margin: 0;
+  padding: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  text-decoration: none;
+}
+
+nav {
+  max-width: 1180px;
+  height: 80px;
+  margin: 0px auto;
+  display: -webkit-flex;
+  display: flex;
+  -ms-align-items: center;
+  align-items: center;
+  justify-content: space-between;
+}
+
+
+header ul {
+  display: -webkit-flex;
+  display: flex;
+  list-style: none;
+  margin-top: 38px;
+  font-size: 15px;
+}
+
+header ul li a {
+  color: #202020;
+  margin: 0px 10px;
+  padding: 10px;
+  border-radius: 5px;
+  text-transform: lowercase;
+}
+
+.nav__icon,
+.nav__icon span {
+  display: none;
+}
+
+.nav__icon {
+  width: 36px;
+  height: 28px;
+  margin-right: 10px;
+  position: relative;
+  cursor: pointer;
+}
+
+.nav__icon span {
+  background: rgba(0, 0, 0, 1);
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  border-radius: 4px;
+}
+
+.nav__icon span:nth-of-type(1) {
+  top: 0;
+}
+
+.nav__icon span:nth-of-type(2) {
+  top: 12px;
+}
+
+.nav__icon span:nth-of-type(3) {
+  bottom: 0;
+}
+
+.nav__icon.active span:nth-of-type(1) {
+  -webkit-transform: translateY(12px) rotate(-45deg);
+  transform: translateY(12px) rotate(-45deg);
+}
+
+.nav__icon.active span:nth-of-type(2) {
+  display: none;
+}
+
+.nav__icon.active span:nth-of-type(3) {
+  -webkit-transform: translateY(-12px) rotate(45deg);
+  transform: translateY(-12px) rotate(45deg);
+}
+
+
+
+@media only screen and (max-width: 700px) {
+  header {
+      position: relative;
+      z-index: 999;
+  }
+  h1 {
+      margin: 0 auto;
+  }
+  header ul {
+      -webkit-flex-direction: column;
+      flex-direction: column;
+      -webkit-justify-content: center;
+      justify-content: center;
+      background: rgba(255, 255, 255, 0.78);
+      position: absolute;
+      top: 80px;
+      left: 0px;
+      width: 100%;
+      z-index: 980;
+  }
+  header ul li {
+      padding: 10px;
+      text-align: center;
+  }
+  header ul li a {
+      display: block;
+      background: transparent;
+      margin: 0px;
+      padding: 20px;
+  }
+  header ul li a:hover {
+      color: #000;
+      background: #fff;
+  }
+  .nav__icon,
+  .nav__icon span {
+      display: inline-block;
+      transition: all .4s;
+      box-sizing: border-box;
+      z-index: 999;
+  }
+
+
+
+
+}
+
+
+
+.logo {
+  margin: 0;
+  font-size: 3.45em;
+}
+
+@media (max-width: 769px) {
+  .logo {
+    margin: 0;
+    font-size: 2.25em;
+  }
+}
+.main-nav {
+  margin-top: 2px;
+}
+
+.main-nav li:first-of-type {
+  margin-top: 8px;
+  margin-right: 6px;
+}
+
+.logo a,
+.main-nav a {
+  padding: 10px 15px;
+  text-transform: uppercase;
+  text-align: center;
+  display: block;
+}
+
+.main-nav a {
+  color: #2e98c7;
+  font-size: 1.25em;
+}
+
+.main-nav a:hover {
+  color: #718daa;
+}
+
+header {
+  padding-left: 2em;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+  background-color: #1a1a1a;
+  position: fixed;
+  width: 100vw;
+  z-index: 1000;
+  margin-bottom: 2em;
+   /*
+   border: 1px solid #a2a2a2;
+   -webkit-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
+	box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+   */
+}
+
+/* ================================= 
+  Media Queries
+==================================== */
+@media (min-width: 769px) {
+  .header,
+  .main-nav {
+    display: -webkit-box;
+    display: flex;
+  }
+
+  .header {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    flex-direction: column;
+    -webkit-box-align: center;
+    align-items: center;
+  }
+
+  .header .header {
+    width: 80%;
+    margin: 0 auto;
+    max-width: 1150px;
+  }
+}
+@media (min-width: 1025px) {
+  .header {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    flex-direction: row;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+  }
 }
