--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,14 @@ body {
   background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/902426/stillwaves-album-cover-3.jpg);
   background-size: cover;
   background-position: top center;
+  margin-bottom: 5em;
+}
+
+
+@media screen and (min-width: 767px) {
+  .bg-album {
+    margin-bottom: 0;
+  }
 }
 
 /*
@@ -592,7 +600,7 @@ header ul li a {
 }
 
 .nav__icon span {
-  background: rgba(0, 0, 0, 1);
+  background: rgba(255, 255, 255, 1);
   position: absolute;
   left: 0;
   width: 100%;
@@ -641,12 +649,12 @@ header ul li a {
       flex-direction: column;
       -webkit-justify-content: center;
       justify-content: center;
-      background: rgba(255, 255, 255, 0.78);
+      background: rgba(0, 0, 0, 0.98);
       position: absolute;
       top: 80px;
       left: 0px;
       width: 100%;
-      z-index: 980;
+      z-index: 19800;
   }
   header ul li {
       padding: 10px;
