updated video section, pushed to stillwaves.ca

--- a/_includes/frontpage-header.html
+++ b/_includes/frontpage-header.html
@@ -1,5 +1,4 @@
- 
-   <section class="section container">
+<section class="section container">
 
     <div class="container-boxes">
        <div class="box fill">MUSIC</div>
@@ -37,7 +36,7 @@
                       <li>8) Trust Yourself </li>
                    </ul>
 
-                   <button type="button" class="btn btn-lg btn-block btn-outline-dark">Pre-Order the Album</button>
+                   <button type="button" class="btn btn-lg btn-block btn-outline-dark "><a href="https://stillwaves.bandcamp.com/" target="_blank" rel="noopener">Pre-Order *SOON</a></button>
 
                 </div>
              </div>
