--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,10 +58,6 @@
   <script src="js/jquery.counterup.js"></script>
   <!-- ICON NEEDS FONT AWESOME FOR CHEVRON UP ICON -->
 
-  <!-- Google Map -->
-  <script src="https://maps.googleapis.com/maps/api/js"></script>
-  <script src="js/google-map-init.js"></script>
-
 
   <script src="js/main.js"></script>
 
@@ -72,8 +68,12 @@
 
 <body>
 
+<main>
 
-    {{ content }}
+  {{ content }}
+
+
+</main>
 
 
   <!-- footer Start -->
