updated video section, pushed to stillwaves.ca

--- a/_includes/frontpage-header.html
+++ b/_includes/frontpage-header.html
@@ -1,11 +1,14 @@
 <section class="section container">
 
     <div class="container-boxes">
-       <div class="box fill">MUSIC</div>
+
+       <div class="box fill"><a href="music.html">Music</a>
+       </div>
        <div class="box fill">TOUR</div>
-       <div class="box fill">ABOUT</div>
-       <div class="box fill">VIDEO</div>
-       <div class="box fill">CONTACT</div>
+       <div class="box fill"><a href="about.html">About</a></div>
+       <div class="box fill"><a href="videos.html">Videos</a>
+       </div>
+       <div class="box fill"><a href="contact.html">Contact</a></div>
     </div>
 
  </section>
