--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/ionicons.min.css">
-  <link rel="stylesheet" href="css/animate.css">
+  <!--<link rel="stylesheet" href="css/animate.css"> -->
   <link rel="stylesheet" href="css/responsive.css">
   <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
@@ -82,7 +82,7 @@
     <div class="container">
        <div class="row">
           <div class="col-md-10 mx-auto text-center">
-             <p>&copy; 2021</p>
+             <p>&copy; 2020 &ndash whenever the world blows up</p>
              <p><small>Site made by <a href="https://danielcarlyle.carbonmade.com" target="_blank" rel="noopener noreferrer">Daniel Carlyle</a></small></p>
 
           </div>
