fixed footer copy

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -82,7 +82,7 @@
     <div class="container">
        <div class="row">
           <div class="col-md-10 mx-auto text-center">
-             <p>&copy; 2020 &ndash whenever the world blows up</p>
+             <p>&copy; 2020 &ndash; whenever the world blows up</p>
              <p><small>Site made by <a href="https://danielcarlyle.carbonmade.com" target="_blank" rel="noopener noreferrer">Daniel Carlyle</a></small></p>
 
           </div>
