--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,7 +62,17 @@
   <script src="js/main.js"></script>
 
   <!-- Global site tag (gtag.js) - Google Analytics goes here pal-->
-  <!-- Global site tag (gtag.js) - Google Analytics -->
+ <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-166983259-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-166983259-1');
+</script>
+
+
 
 </head>
 
