adderd social media accts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -89,9 +89,23 @@
     <div class="container">
        <div class="row">
           <div class="col-md-10 mx-auto text-center">
-             <p>&copy; 2020 &ndash; whenever the world blows up</p>
-             <p><small>Site made by <a href="https://danielcarlyle.carbonmade.com" target="_blank" rel="noopener noreferrer">Daniel Carlyle</a></small></p>
 
+<div class="footer-menu">
+
+  <ul class="social-icons">
+    <li>
+      <a href="https://www.facebook.com/stillwavescanada" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook fa-3x" aria-hidden="true"></i></a>
+      </li>
+      <li>
+      <a href="https://www.instagram.com/stillwavesband" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram fa-3x" aria-hidden="true"></i></a>
+      </li>
+  </ul>
+
+</div>
+
+
+             <p>&copy; 2020 &ndash; end of days</p>
+             <p><small>Site made by <a href="https://danielcarlyle.carbonmade.com" target="_blank" rel="noopener noreferrer">DC</a></small></p>
           </div>
 
        </div>
