--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,6 +19,12 @@
                   <li><a href="about.html">About</a></li>
                   <li><a href="videos.html">Videos</a></li>
                   <li><a href="contact.html">Contact</a></li>
+                     <li>
+                       <a href="https://www.facebook.com/stillwavescanada" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook" aria-hidden="true"></i></a>
+                       </li>
+                       <li>
+                       <a href="https://www.instagram.com/stillwavesband" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram" aria-hidden="true"></i></a>
+                       </li>
                </ul>
                
                <div class="nav__icon">
