--- a/css/style.css
+++ b/css/style.css
@@ -15,56 +15,28 @@ main {
   min-height: 100vh;
 }
 
-figure {
-  margin: .0005px;
-}
 
-
-.img-wrapper {
-  background: #ff5722;
-  display: -webkit-box;
-  display: flex;
-  -webkit-box-flex: 1;
-  flex: 1 1 100%;
-  overflow: hidden;
-  padding: var(--spacing);
-  position: relative;
-  max-height: 50em;
-  height: 100%;
-}
-
-.img-wrapper img {
-  -webkit-filter: grayscale(100%) contrast(1) blur(var(--blur));
-  filter: grayscale(100%) contrast(1) blur(var(--blur));
-  -webkit-box-flex: 1;
-  flex: 1 0 100%;
-  height: 100%;
-  max-width: 100%;
-  mix-blend-mode: var(--bg-blend);
-  -o-object-fit: cover;
-  object-fit: cover;
-  opacity: var(--opacity);
-  position: relative;
-  width: 100%;
-}
-
-.img-wrapper::before {
-  background-color: var(--foreground);
-  bottom: 0;
-  content: "";
-  height: 100%;
-  left: 0;
-  mix-blend-mode: var(--fg-blend);
-  position: absolute;
-  right: 0;
-  top: 0;
-  width: 100%;
-  z-index: 1;
+* {
+  box-sizing: border-box;
 }
 
 html, body {
   min-height: 100vh;
 }
+
+
+body {
+  background: var(--background);
+   -webkit-animation: pulse 80s infinite alternate;
+   -moz-animation: pulse_m 80s infinite alternate;
+   height: 100vh;
+   -webkit-transition: 0.5s background ease;
+   transition: 0.5s background ease;
+   font-family: "Montserrat", sans-serif;
+   line-height: 1.6;
+   margin: 0;
+   color: #3b4645;
+ }
 
 /* MIXINS 
 body {
@@ -79,9 +51,6 @@ body {
 */
 
 
-* {
-  box-sizing: border-box;
-}
 
 /* New header styling */
 
@@ -426,6 +395,54 @@ header {
   }
 }
 
+
+figure {
+  margin: .0005px;
+}
+
+
+.img-wrapper {
+  background: #ff5722;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-flex: 1;
+  flex: 1 1 100%;
+  overflow: hidden;
+  padding: var(--spacing);
+  position: relative;
+  max-height: 50em;
+  height: 100%;
+}
+
+.img-wrapper img {
+  -webkit-filter: grayscale(100%) contrast(1) blur(var(--blur));
+  filter: grayscale(100%) contrast(1) blur(var(--blur));
+  -webkit-box-flex: 1;
+  flex: 1 0 100%;
+  height: 100%;
+  max-width: 100%;
+  mix-blend-mode: var(--bg-blend);
+  -o-object-fit: cover;
+  object-fit: cover;
+  opacity: var(--opacity);
+  position: relative;
+  width: 100%;
+}
+
+.img-wrapper::before {
+  background-color: var(--foreground);
+  bottom: 0;
+  content: "";
+  height: 100%;
+  left: 0;
+  mix-blend-mode: var(--fg-blend);
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 100%;
+  z-index: 1;
+}
+
 .bg-album {
   background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/902426/stillwaves-album-cover-3.jpg);
   background-size: cover;
@@ -440,17 +457,6 @@ header {
   }
 }
 
-body {
- background: var(--background);
-  -webkit-animation: pulse 80s infinite alternate;
-  -moz-animation: pulse_m 80s infinite alternate;
-  height: 100vh;
-  -webkit-transition: 0.5s background ease;
-  transition: 0.5s background ease;
-  font-family: "Montserrat", sans-serif;
-  line-height: 1.6;
-  margin: 0;
-}
 
 .theme-switch {
   display: none;
@@ -521,7 +527,7 @@ ol {
 
 ul li,
 ol li {
-  color: #f9f9f9;
+  color: #6f6a6a;
 }
 
 h1,
