--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -72,6 +72,8 @@
   gtag('config', 'UA-166983259-1');
 </script>
 
+<!-- mailchimp pop-up integration -->
+<script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/ce3d72c843c669c19339f4085/9a9ed3236e7b1894a45f8f272.js");</script>
 
 
 </head>
