--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -84,6 +84,40 @@
   {{ content }}
 </main>
 
+<section class="newsletter-block">
+
+  <!-- Newsletter section -->
+<div class="container">
+  <div class="row">
+     <div class="col-md-12 text-center">
+
+<!-- Begin Mailchimp Signup Form -->
+<link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+<div id="mc_embed_signup">
+<form action="https://stillwaves.us10.list-manage.com/subscribe/post?u=ce3d72c843c669c19339f4085&amp;id=3097088881" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+
+<label for="mce-EMAIL">SUBSCRIBE</label>
+<p>Sign up with your email address.</p>
+<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_ce3d72c843c669c19339f4085_3097088881" tabindex="-1" value=""></div>
+    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    </div>
+</form>
+</div>
+
+<!--End mc_embed_signup-->
+
+</div>
+
+</div>
+</div>
+
+</section>
+
+
+
 
   <!-- footer Start -->
   <footer>
@@ -106,7 +140,7 @@
 </div>
 
 
-             <p>&copy; 2020 &ndash; end of days</p>
+             <p>&copy; 2021</p>
              <p><small>Site made by <a href="https://danielcarlyle.carbonmade.com" target="_blank" rel="noopener noreferrer">DC</a></small></p>
           </div>
 
