--- a/_includes/frontpage-header.html
+++ b/_includes/frontpage-header.html
@@ -1,17 +1,40 @@
-<section class="section container">
 
-    <div class="container-boxes">
 
-       <div class="box fill"><a href="music.html">Music</a>
-       </div>
-       <div class="box fill">TOUR</div>
-       <div class="box fill"><a href="about.html">About</a></div>
-       <div class="box fill"><a href="videos.html">Videos</a>
-       </div>
-       <div class="box fill"><a href="contact.html">Contact</a></div>
-    </div>
+    <section class="section container">
+      <div class="container-boxes">
+  
+         <div class="box fill"><a href="music.html">Music</a>
+         </div>
+         <div class="box fill">TOUR</div>
+         <div class="box fill"><a href="about.html">About</a></div>
+         <div class="box fill"><a href="videos.html">Videos</a>
+         </div>
+         <div class="box fill"><a href="contact.html">Contact</a></div>
+      </div>
+   </section>
 
- </section>
+
+   <script>
+      const elements = Array.from(document.querySelectorAll('.fill'));
+
+function fill(item, index) {
+  
+  const bgColor = getComputedStyle(item).backgroundColor,
+  fillLayer = document.createElement('div');
+  fillLayer.classList.add('fill-layer');
+  item.style.backgroundColor = 'transparent';
+  item.style.position = 'relative';
+  item.style.overflow = 'hidden';
+  setTimeout(function() {
+    fillLayer.style.backgroundColor = bgColor;  
+    item.appendChild(fillLayer);
+  }, index * 1000);
+  
+}
+
+elements.forEach(fill);
+   </script>
+
 
  
  <section class="section">
