latest site build

--- a/_includes/frontpage-header.html
+++ b/_includes/frontpage-header.html
@@ -48,21 +48,21 @@ elements.forEach(fill);
                 <div class="content text-left py-3">
                    <h2 class="album-title">REGRESSING TIMES</h2>
 
-                   <h3>Album release September 29, 2020</h3>
+                   <h3>Album release 2021</h3>
 
                    <ul class="album-listing py-4">
                       <li>1) I See You in Ruins</li>
-                      <li>2) Lost in the Plot</li>
+                      <li>2) Lost the Plot</li>
                       <li>3) There is No Hope</li>
                       <li>4) Mirrors Tell All</li>
                       <li>5) Regressing Times</li>
-                      <li>6) Modern Fascists
+                      <li>6) Modern Fascist
                       </li>
                       <li>7) No Minds</li>
                       <li>8) Trust Yourself </li>
                    </ul>
 
-                   <button type="button" class="btn btn-lg btn-block btn-outline-dark "><a href="https://stillwaves.bandcamp.com/" target="_blank" rel="noopener">Pre-Order *SOON</a></button>
+                  <!-- <button type="button" class="btn btn-lg btn-block btn-outline-dark "><a href="https://stillwaves.bandcamp.com/" target="_blank" rel="noopener">Pre-Order *SOON</a></button> --> 
 
                 </div>
              </div>
