--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,8 @@ body {
 --*/
 header {
   background: #fff;
-  padding: 20px 0;
+  margin-bottom: 12em;
+  position: relative;
 }
 header .navbar {
   margin-bottom: 0px;
@@ -940,3 +941,7 @@ transition: all .3 ease;
 }
 
 
+
+.section-top {
+  margin-top: 2em;;
+}
